Correct table cell content alignment

--- a/src/styles/missions.css
+++ b/src/styles/missions.css
@@ -30,6 +30,10 @@ th {
 /* tr:nth-child(even) {
   background-color: #f2f2f2;
 } */
+.name,
+.description {
+  vertical-align: top;
+}
 
 .joined {
   background-color: #f2f2f2;
